[java] Use java directly instead of commons io for html compressor class